updates and report

--- a/Nyss_lab2_parser/Nyss_lab2_parser.csproj
+++ b/Nyss_lab2_parser/Nyss_lab2_parser.csproj
@@ -59,6 +59,9 @@
       <DependentUpon>Preloader.xaml</DependentUpon>
     </Compile>
     <Compile Include="RowDataObject.cs" />
+    <Compile Include="UpdateReport.xaml.cs">
+      <DependentUpon>UpdateReport.xaml</DependentUpon>
+    </Compile>
     <Page Include="DataGridWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -79,6 +82,10 @@
       <SubType>Code</SubType>
     </Compile>
     <Page Include="Preloader.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UpdateReport.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -171,6 +178,9 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="waitImg.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Image1.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
