--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.1.3",
     "browser-fs-access": "^0.16.4",
+    "docx": "^6.0.3",
     "file-saver": "^2.0.5",
     "jquery": "^3.5.1",
     "mammoth": "^1.4.16",
